--- a/common/style.css
+++ b/common/style.css
@@ -13,14 +13,19 @@ canvas {
 
 #overlay {
   position: absolute;
-  left: 10px;
-  top: 10px;
-  color: rgb(255, 255, 255);
+  left: 1rem;
+  top: 1rem;
+  color: white;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 1.5rem;
   padding: 0.6rem;
   background-color: rgba(50, 50, 50, 0.7);
   border-radius: 5px;
+  line-height: 1.9rem;
+}
+
+a {
+  color: darkturquoise;
 }
 
 #controls {
