--- a/editor/style.css
+++ b/editor/style.css
@@ -1,16 +1,13 @@
 canvas {
   background-color: rgb(20, 20, 20);
   cursor: none;
-  width: 1000px;
 }
 
-#output {
-  height: 100%;
-  background-color: rgb(60, 80, 100);
-  flex: 0 1 auto;
-  font-family: 'Courier New', Courier, monospace;
-  padding: 10px;
-  color: white;
+#main {
+  overflow: scroll;
+  width: 100%;
+  height: 800px;
+  background-color: rgb(94, 94, 94);
 }
 
 button {
